--- a/_includes/api/pb-api-search-results.html
+++ b/_includes/api/pb-api-search-results.html
@@ -4,7 +4,6 @@
 	
 	
 	var arrData = [];
-
 		
 	$(document).ready(function() {
 		
@@ -33,14 +32,14 @@
 			}
 			
 			if(idx == fileCount) { 
-				displayHTML(strDisplay, arrData);
+				displayHTML(strDisplay, arrData, searchTerm);
 			}
 			
 		}); 
 		
 	}
 	
-	function displayHTML(strDisplay, arrData) {
+	function displayHTML(strDisplay, arrData, searchTerm) {
 		var element = document.getElementById("pb-api-search-results");
 		
 		if (arrData.length > 0) { 
@@ -48,7 +47,7 @@
 				strDisplay += arrData[i];
 			}
 		} else { 
-			strDisplay += "<div class=\"pb-api-doc-description\">There were no results for that search term.</div>";
+			strDisplay += "<div class=\"pb-api-doc-description\">There were no results for " + searchTerm + ".</div>";
 		}
 		
 		element.innerHTML = strDisplay;
