logging the data results

--- a/_includes/api/pb-api-search-results.html
+++ b/_includes/api/pb-api-search-results.html
@@ -27,6 +27,7 @@
 	
 	function getFileContents(apiFile, searchTerm, strDisplay, idx, fileCount) {
 		$.get("/sandbox/apiDocs/html/" + apiFile, function(data) {
+			console.log(data);
 			if (data.search(searchTerm) != -1) {
 				arrData.push(getSearchResults(apiFile, data, searchTerm));
 			}
