logging success or failure of search

--- a/_includes/api/pb-api-search-results.html
+++ b/_includes/api/pb-api-search-results.html
@@ -27,9 +27,11 @@
 	
 	function getFileContents(apiFile, searchTerm, strDisplay, idx, fileCount) {
 		$.get("/sandbox/apiDocs/html/" + apiFile, function(data) {
-			console.log(data);
+			
 			if (data.search(searchTerm) != -1) {
 				arrData.push(getSearchResults(apiFile, data, searchTerm));
+			} else { 
+				console.log("/sandbox/apiDocs/html/" + apiFile);
 			}
 			
 			if(idx == fileCount) { 
