Success of failure logging

--- a/_includes/api/pb-api-search-results.html
+++ b/_includes/api/pb-api-search-results.html
@@ -29,9 +29,10 @@
 		$.get("/sandbox/apiDocs/html/" + apiFile, function(data) {
 			
 			if (data.search(searchTerm) != -1) {
+				console.log("Match for\n/sandbox/apiDocs/html/" + apiFile);
 				arrData.push(getSearchResults(apiFile, data, searchTerm));
 			} else { 
-				console.log("/sandbox/apiDocs/html/" + apiFile);
+				console.log("No match for\n/sandbox/apiDocs/html/" + apiFile);
 			}
 			
 			if(idx == fileCount) { 
