--- a/_includes/api/pb-api-search-results.html
+++ b/_includes/api/pb-api-search-results.html
@@ -9,7 +9,7 @@
 		
 		var queryItems = getUrlVars()
 		var searchTerm = queryItems[0][1];
-		console.log(searchTerm);
+		console.log(queryItems);
 		var strDisplay = "<div class=\"pb-api-doc-title\">Search results for: " + searchTerm + "</div><div style=\"float:right\"><a href=\"/sandbox/prebid-api-guide.html?apiDocTarget=About\">Return to API</a></div><br><hr>";
 		var arrAPIFiles = [];
 		
