--- a/_includes/api/pb-api-test.html
+++ b/_includes/api/pb-api-test.html
@@ -8,11 +8,10 @@
 		$('#apiSearch').click(function (e) {
 
 			e.preventDefault();
-			console.log($(":input"));
+			alert($(":input"));
 			var searchTerm = $("input:first").val();
 			
 			if (!!searchTerm.trim()) { 
-				alert(searchTerm);
 		    	window.location.href = '/sandbox/prebid-api-search.html?searchTerm=' + searchTerm;
 	    	} else { 
 		    	alert("You did not enter any search terms.");
