--- a/_layouts/fourofour.html
+++ b/_layouts/fourofour.html
@@ -2,7 +2,7 @@
 
 {% include nav.html %}
 
-	<div class="container bs-docs-container error404">
+	<div class="error404">
 		
 		<h1>404</h1>
 		<h3>The page you are looking for cannot be found or does not exist.</h3>
