Added Prebid branding and nav to JW Player (Platform) example

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,13 +17,13 @@
         <title>{{page.title}} for Header Bidding</title>
     {% endif %}
 
-<!-- OneTrust Cookies Consent Notice start -->
-
-<script src="https://cdn.cookielaw.org/consent/53783db5-1614-43d4-bb1a-148e68e8c87b.js" type="text/javascript" charset="UTF-8"></script>
-<script type="text/javascript">
-function OptanonWrapper() { }
-</script>
-<!-- OneTrust Cookies Consent Notice end -->
+	<!-- OneTrust Cookies Consent Notice start -->
+	
+	<script src="https://cdn.cookielaw.org/consent/53783db5-1614-43d4-bb1a-148e68e8c87b.js" type="text/javascript" charset="UTF-8"></script>
+	<script type="text/javascript">
+	function OptanonWrapper() { }
+	</script>
+	<!-- OneTrust Cookies Consent Notice end -->
 
     
     <!--<link href="{{site.baseurl}}/assets/css/bootstrap.min.css" rel="stylesheet">-->
@@ -61,6 +61,11 @@ function OptanonWrapper() { }
     <script src="{{site.baseurl}}/assets/js/easing.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/main.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/pbjs_home.js"></script>
+    <script src="https://content.jwplatform.com/libraries/72xIKEe6.js"></script>
+    
+    {% if page.isVideoExample %}
+    	<script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
+    {% endif %}
     
 </head>
 
