added prevBiddercode support

--- a/_layouts/bidder.html
+++ b/_layouts/bidder.html
@@ -53,6 +53,10 @@
 <tr><td class="pbTd"><code>{{ "hb_cache_host_" | append: page.biddercode | slice: 0,20 }}</code></td><td class="pbTd"><code>{{ "hb_cache_id_" | append: page.biddercode | slice: 0,20 }}</code></td><td class="pbTd"><code>{{ "hb_uuid_" | append: page.biddercode | slice: 0,20 }}</code></td></tr>
 </table>
 
+{% if page.prevBiddercode %}
+This bidder previously had a bidder code of `{{ page.prevBiddercode }}`, but prefers new configurations to use `{{ page.biddercode }}`.
+{% endif %}
+
 {% if page.bidder_supports_deals != false %}
 <h3>"Deal ID" Ad Server Key</h3>
 <code>{{ "hb_deal_" | append: page.biddercode | slice: 0,20 }}</code>
