--- a/_includes/video/pb-is-fp.html
+++ b/_includes/video/pb-is-fp.html
@@ -64,104 +64,101 @@ function OptanonWrapper() { }
     
     <!--production version of prebid.js-->
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
-    <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script>  	
     
+    <!--pbjs and player code -->	
+    
+    <link rel="stylesheet" href="//cdn.flowplayer.com/releases/native/stable/style/flowplayer.css">
+    <script src="//cdn.flowplayer.com/releases/native/stable/flowplayer.min.js"></script>
+    <script src="//cdn.flowplayer.com/releases/native/stable/plugins/ads.min.js"></script>
+    <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+    
+    <style>
+	        #player {
+	            max-width: 40em;
+	            width: 100%;
+	            float: left;
+	        }
+	
+	        #controls {
+	            float: left;
+	            padding: 1em;
+	        }
+	    </style>
+	    
     <script type="text/javascript">
-    	
-    	var videoType = "{{page.videoType}}";	 
-    	if (videoType == "pb-is-jw-01") { 
-	    	var pbjs = pbjs || {};
-			pbjs.que = pbjs.que || [];
-			
-			// define invokeVideoPlayer in advance in case we get the bids back from prebid before the entire page loads
-			var tempTag = false;
-			var invokeVideoPlayer = function(url){
-			  tempTag = url;
-			}
-			
-			/*
-			Prebid Video adUnit
-			*/
-			
-			var videoAdUnit = {
-			  code: 'video1',
-			  sizes: [640,480],
-			  mediaTypes: {
-			    video: {
-			      context: "instream"
-			    }
-			  },
-			  bids: [
-			    {
-			      bidder: 'appnexusAst',
-			      params: {
-			        placementId: '13232361', // Add your own placement id here
-			        video: {
-			          skipppable: true,
-			          playback_method: ['auto_play_sound_off']
-			        }
-			      }
-			    }
-			  ]
-			};
-			
-			pbjs.que.push(function(){
-			  pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
-			
-			  pbjs.setConfig({ 
-			    usePrebidCache: true 
-			  });
-			
-			  pbjs.requestBids({
-			      bidsBackHandler: function(bids) {
-			          var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
-			              adUnit: videoAdUnit,
-			              params: {
-			                  iu: '/19968336/prebid_cache_video_adunit',
-			                  cust_params: {
-			                    section: "blog",
-			                    anotherKey: "anotherValue"
-			                  },
-			                  output: "vast"
-			              }
-			          });
-			          invokeVideoPlayer(videoUrl);
-			      }
-			  });
-			});
-			
-			pbjs.bidderSettings =
-			{
-			    standard: {
-			        adserverTargeting: [
-			            {
-			                key: "hb_bidder",
-			                val: function (bidResponse) {
-			                    return bidResponse.bidderCode;
-			                }
-			            }, {
-			                key: "hb_adid",
-			                val: function (bidResponse) {
-			                    return bidResponse.adId;
-			                }
-			            }, {
-			                key: "hb_pb",
-			                val: function (bidResponse) {
-			                    return "10.00";
-			                }
-			            }, {
-			                key: "hb_size",
-			                val: function (bidResponse) {
-			                    return bidResponse.size;
-			
-			                }
-			            }
-			        ]
-			    }
-			};
-			
-	 	}
-	     
+	    
+      var pbjs = pbjs || {};
+      pbjs.que = pbjs.que || [];
+
+      // The ad tag in Flowplayer can be actual ad tag or promise to an ad tag.
+      // We return the ad tag if it is available before the player is ready to play
+      // Otherwise the player waits for 2 secs for tag to be available.
+      var adtag = null
+      var timeout = 2000
+      var asyncTag = function() {
+        if (adtag) return Promise.resolve(adtag)
+
+        return new Promise(function (resolve) {
+          setTimeout(function() {
+            resolve(adtag)
+          }, timeout)
+        })
+      }
+
+      /*
+       Prebid Video adUnit
+       */
+
+      var videoAdUnit = {
+        code: 'video1',
+        sizes: [640,480],
+        mediaTypes: {
+          video: {
+            context: "instream"
+          }
+        },
+        bids: [
+          {
+            bidder: 'appnexus',
+            params: {
+              placementId: '13232361', // Add your own placement id here
+              video: {
+                skipppable: true,
+                playback_method: ['auto_play_sound_off']
+              }
+            }
+          }
+        ]
+      };
+
+      pbjs.que.push(function(){
+        pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+
+        pbjs.setConfig({
+          debug: true,
+          cache: {
+            url: 'https://prebid.adnxs.com/pbc/v1/cache'
+          }
+        });
+
+        pbjs.requestBids({
+          bidsBackHandler: function(bids) {
+            var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
+              adUnit: videoAdUnit,
+              params: {
+                iu: '/19968336/prebid_cache_video_adunit',
+                cust_params: {
+                  section: "blog",
+                  anotherKey: "anotherValue"
+                },
+                output: "vast"
+              }
+            });
+            adtag = videoUrl;
+          }
+        });
+      });
+			     
 	</script>
     
 </head>
