--- a/_includes/video/pb-is-vjs.html
+++ b/_includes/video/pb-is-vjs.html
@@ -64,105 +64,72 @@ function OptanonWrapper() { }
     
     <!--production version of prebid.js-->
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
-    <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script>  	
     
-    <script type="text/javascript">
-    	
-    	var videoType = "{{page.videoType}}";	 
-    	if (videoType == "pb-is-jw-01") { 
-	    	var pbjs = pbjs || {};
-			pbjs.que = pbjs.que || [];
-			
-			// define invokeVideoPlayer in advance in case we get the bids back from prebid before the entire page loads
-			var tempTag = false;
-			var invokeVideoPlayer = function(url){
-			  tempTag = url;
-			}
-			
-			/*
-			Prebid Video adUnit
-			*/
-			
-			var videoAdUnit = {
-			  code: 'video1',
-			  sizes: [640,480],
-			  mediaTypes: {
-			    video: {
-			      context: "instream"
-			    }
-			  },
-			  bids: [
-			    {
-			      bidder: 'appnexusAst',
-			      params: {
-			        placementId: '13232361', // Add your own placement id here
-			        video: {
-			          skipppable: true,
-			          playback_method: ['auto_play_sound_off']
-			        }
-			      }
-			    }
-			  ]
-			};
-			
-			pbjs.que.push(function(){
-			  pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
-			
-			  pbjs.setConfig({ 
-			    usePrebidCache: true 
-			  });
-			
-			  pbjs.requestBids({
-			      bidsBackHandler: function(bids) {
-			          var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
-			              adUnit: videoAdUnit,
-			              params: {
-			                  iu: '/19968336/prebid_cache_video_adunit',
-			                  cust_params: {
-			                    section: "blog",
-			                    anotherKey: "anotherValue"
-			                  },
-			                  output: "vast"
-			              }
-			          });
-			          invokeVideoPlayer(videoUrl);
-			      }
-			  });
-			});
-			
-			pbjs.bidderSettings =
-			{
-			    standard: {
-			        adserverTargeting: [
-			            {
-			                key: "hb_bidder",
-			                val: function (bidResponse) {
-			                    return bidResponse.bidderCode;
-			                }
-			            }, {
-			                key: "hb_adid",
-			                val: function (bidResponse) {
-			                    return bidResponse.adId;
-			                }
-			            }, {
-			                key: "hb_pb",
-			                val: function (bidResponse) {
-			                    return "10.00";
-			                }
-			            }, {
-			                key: "hb_size",
-			                val: function (bidResponse) {
-			                    return bidResponse.size;
-			
-			                }
-			            }
-			        ]
-			    }
-			};
-			
-	 	}
-	     
-	</script>
+    <!--pbjs and player code -->	
+    	    
+	<!-- use recent version of videojs to ensure proper functioning with the iOS devices -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/6.4.0/video-js.css">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/video.js/6.4.0/video.js"></script>
+        <!-- videojs-vast-vpaid -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/videojs-vast-vpaid/2.0.2/videojs.vast.vpaid.min.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-vast-vpaid/2.0.2/videojs_5.vast.vpaid.min.js"></script>
+
+        <script>
+            var pbjs = pbjs || {};
+            pbjs.que = pbjs.que || [];
+
+
+            /* Prebid video ad unit */
+
+            var videoAdUnit = {
+                code: 'video1',
+                mediaTypes: {
+                    video: {
+                        playerSize: [640, 480],
+                        context: 'instream'
+                    }
+                },
+                bids: [{
+                    bidder: 'appnexus',
+                    params: {
+                        placementId: 13232361,
+                        video: {
+                            skippable: true,
+                            playback_method: ['auto_play_sound_off']
+                        }
+                    }
+                }]
+            };
+
+            pbjs.que.push(function() {
+                pbjs.addAdUnits(videoAdUnit);
+
+                pbjs.setConfig({
+                    debug: true,
+                    cache: {
+                        url: 'https://prebid.adnxs.com/pbc/v1/cache'
+                    }
+                });
+
+                pbjs.requestBids({
+                    bidsBackHandler: function(bids) {
+                        var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
+                            adUnit: videoAdUnit,
+                            params: {
+                                iu: '/19968336/prebid_cache_video_adunit',
+                                cust_params: {
+                                    section: 'blog',
+                                    anotherKey: 'anotherValue'
+                                },
+                                output: 'vast'
+                            }
+                        });
+                        invokeVideoPlayer(videoUrl);
+                    }
+                });
+            });
+
+        </script>    
     
 </head>
 
