--- a/_includes/video/pb-os-dfp.html
+++ b/_includes/video/pb-os-dfp.html
@@ -64,106 +64,73 @@ function OptanonWrapper() { }
     
     <!--production version of prebid.js-->
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
-    <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script>  	
     
-    <script type="text/javascript">
-    	
-    	var videoType = "{{page.videoType}}";	 
-    	if (videoType == "pb-is-jw-01") { 
-	    	var pbjs = pbjs || {};
-			pbjs.que = pbjs.que || [];
-			
-			// define invokeVideoPlayer in advance in case we get the bids back from prebid before the entire page loads
-			var tempTag = false;
-			var invokeVideoPlayer = function(url){
-			  tempTag = url;
-			}
-			
-			/*
-			Prebid Video adUnit
-			*/
-			
-			var videoAdUnit = {
-			  code: 'video1',
-			  sizes: [640,480],
-			  mediaTypes: {
-			    video: {
-			      context: "instream"
-			    }
-			  },
-			  bids: [
-			    {
-			      bidder: 'appnexusAst',
-			      params: {
-			        placementId: '13232361', // Add your own placement id here
-			        video: {
-			          skipppable: true,
-			          playback_method: ['auto_play_sound_off']
-			        }
-			      }
-			    }
-			  ]
-			};
-			
-			pbjs.que.push(function(){
-			  pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
-			
-			  pbjs.setConfig({ 
-			    usePrebidCache: true 
-			  });
-			
-			  pbjs.requestBids({
-			      bidsBackHandler: function(bids) {
-			          var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
-			              adUnit: videoAdUnit,
-			              params: {
-			                  iu: '/19968336/prebid_cache_video_adunit',
-			                  cust_params: {
-			                    section: "blog",
-			                    anotherKey: "anotherValue"
-			                  },
-			                  output: "vast"
-			              }
-			          });
-			          invokeVideoPlayer(videoUrl);
-			      }
-			  });
-			});
-			
-			pbjs.bidderSettings =
-			{
-			    standard: {
-			        adserverTargeting: [
-			            {
-			                key: "hb_bidder",
-			                val: function (bidResponse) {
-			                    return bidResponse.bidderCode;
-			                }
-			            }, {
-			                key: "hb_adid",
-			                val: function (bidResponse) {
-			                    return bidResponse.adId;
-			                }
-			            }, {
-			                key: "hb_pb",
-			                val: function (bidResponse) {
-			                    return "10.00";
-			                }
-			            }, {
-			                key: "hb_size",
-			                val: function (bidResponse) {
-			                    return bidResponse.size;
-			
-			                }
-			            }
-			        ]
-			    }
-			};
-			
-	 	}
-	     
-	</script>
+    <!--pbjs and player code -->	
     
+    <script async src="//www.googletagservices.com/tag/js/gpt.js"></script>
+    
+	<script>
+
+            var pbjs = pbjs || {};
+            pbjs.que = pbjs.que || [];
+
+            var googletag = googletag || {};
+            googletag.cmd = googletag.cmd || [];
+
+            var PREBID_TIMEOUT = 1000;
+
+            var adUnits = [{
+                code: 'video1',
+                mediaTypes: {
+                    video: {
+                        playerSize: [640, 480],
+                        context: 'outstream'
+                    }
+                },
+                bids: [
+                    {
+                        bidder: 'appnexus',
+                        params: {
+                            placementId: 13232385,
+                            video: {
+                                skippable: true,
+                                playback_method: ['auto_play_sound_off']
+                            }
+                        }
+                    }
+                ]
+            }];
+
+            pbjs.que.push(function() {
+                pbjs.addAdUnits(adUnits);
+                pbjs.requestBids({
+                    bidsBackHandler: initAdserver
+                });
+            });
+
+            function initAdserver() {
+                if (pbjs.initAdserverSet) return;
+                pbjs.initAdserverSet = true;
+                googletag.cmd.push(function() {
+                    pbjs.que.push(function() {
+                        pbjs.setTargetingForGPTAsync();
+                        googletag.pubads().refresh();
+                    });
+                });
+            }
+
+            setTimeout(function() {
+                initAdserver();
+            }, PREBID_TIMEOUT);
+
+            googletag.cmd.push(function() {
+                var slot1 = googletag.defineSlot('/19968336/prebid_outstream_adunit_1', [[1, 1]], 'video1').addService(googletag.pubads());
+                googletag.pubads().disableInitialLoad();
+                googletag.pubads().enableSingleRequest();
+                googletag.enableServices();
+            });
+
+        </script>
 </head>
 
 <body>
