--- a/_includes/video/pbs-jw01.html
+++ b/_includes/video/pbs-jw01.html
@@ -64,106 +64,95 @@ function OptanonWrapper() { }
     
     <!--production version of prebid.js-->
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
-    <script type="text/javascript" src="//services.brid.tv/player/build/brid.min.js"></script>  	
     
-    <script type="text/javascript">
-    	
-    	var videoType = "{{page.videoType}}";	 
-    	if (videoType == "pb-is-jw-01") { 
-	    	var pbjs = pbjs || {};
-			pbjs.que = pbjs.que || [];
-			
-			// define invokeVideoPlayer in advance in case we get the bids back from prebid before the entire page loads
-			var tempTag = false;
-			var invokeVideoPlayer = function(url){
-			  tempTag = url;
-			}
-			
-			/*
-			Prebid Video adUnit
-			*/
-			
-			var videoAdUnit = {
-			  code: 'video1',
-			  sizes: [640,480],
-			  mediaTypes: {
-			    video: {
-			      context: "instream"
-			    }
-			  },
-			  bids: [
-			    {
-			      bidder: 'appnexusAst',
-			      params: {
-			        placementId: '13232361', // Add your own placement id here
-			        video: {
-			          skipppable: true,
-			          playback_method: ['auto_play_sound_off']
-			        }
-			      }
-			    }
-			  ]
-			};
-			
-			pbjs.que.push(function(){
-			  pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
-			
-			  pbjs.setConfig({ 
-			    usePrebidCache: true 
-			  });
-			
-			  pbjs.requestBids({
-			      bidsBackHandler: function(bids) {
-			          var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
-			              adUnit: videoAdUnit,
-			              params: {
-			                  iu: '/19968336/prebid_cache_video_adunit',
-			                  cust_params: {
-			                    section: "blog",
-			                    anotherKey: "anotherValue"
-			                  },
-			                  output: "vast"
-			              }
-			          });
-			          invokeVideoPlayer(videoUrl);
-			      }
-			  });
-			});
-			
-			pbjs.bidderSettings =
-			{
-			    standard: {
-			        adserverTargeting: [
-			            {
-			                key: "hb_bidder",
-			                val: function (bidResponse) {
-			                    return bidResponse.bidderCode;
-			                }
-			            }, {
-			                key: "hb_adid",
-			                val: function (bidResponse) {
-			                    return bidResponse.adId;
-			                }
-			            }, {
-			                key: "hb_pb",
-			                val: function (bidResponse) {
-			                    return "10.00";
-			                }
-			            }, {
-			                key: "hb_size",
-			                val: function (bidResponse) {
-			                    return bidResponse.size;
-			
-			                }
-			            }
-			        ]
-			    }
-			};
-			
-	 	}
-	     
-	</script>
-    
+    <!--pbjs and player code -->	
+    	    
+	<script>
+        var pbjs = pbjs || {};
+        pbjs.que = pbjs.que || [];
+
+        /* PRE-DEFINE `invokeVideoPlayer`
+
+        Because we have no way of knowing when all the bids will be
+        returned from Prebid we can't be sure that the browser will
+        reach the point where `invokeVideoPlayer` is defined before
+        `bidsBackHandler` fires and tries to call it.
+
+        To prevent an "`invokeVideoPlayer` not defined" error, we
+        pre-define it before we make the call to Prebid, and redefine
+        it later on with the code to create the player and play the
+        ad.
+
+        In this first version, it simply stores the winning VAST to
+        use later. */
+
+        var tempTag = false;
+        var invokeVideoPlayer = function(url) {
+            tempTag = url;
+        };
+
+        var videoAdUnit = {
+            code: 'video1',
+            mediaTypes: {
+                video: {
+                    playerSize: [640, 480],
+                    context: 'instream',
+                    mimes: ['video/mp4'],
+                    protocols: [1, 2, 3, 4, 5, 6, 7, 8],
+                    playbackmethod: [2]
+                }
+            },
+            bids: [{
+                bidder: 'appnexus',
+                params: {
+                    placementId: 13232361, // Add your own placement id here.
+                    video: {
+                        skippable: true,
+                        playback_method: ['auto_play_sound_off']
+                    }
+                }
+            }]
+        };
+
+        pbjs.que.push(function() {
+
+            // configure prebid to use prebid cache and prebid server
+            // make sure to add your own accountId to your s2sConfig object
+            pbjs.setConfig({
+                cache: {
+                    url: 'https://prebid.adnxs.com/pbc/v1/cache'
+                },
+                debug: true,
+                s2sConfig: {
+                    endpoint: 'http://prebid.adnxs.com/pbs/v1/openrtb2/auction',
+                    enabled: true,
+                    accountId: 'c9d412ee-3cc6-4b66-9326-9f49d528f13e',
+                    bidders: ['appnexus']
+                }
+            });
+
+            pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+
+            pbjs.requestBids({
+                bidsBackHandler: function(bids) {
+
+                    var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
+                        adUnit: videoAdUnit,
+                        params: {
+                            iu: '/19968336/prebid_cache_video_adunit',
+                            cust_params: {
+                                section: 'blog',
+                                anotherKey: 'anotherValue'
+                            },
+                            output: 'vast'
+                        }
+                    });
+                    invokeVideoPlayer(videoUrl);
+                }
+            });
+        });
+
+    </script> 
 </head>
 
 <body>
