san fran event on oct 24

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,10 +53,8 @@
 				</div>
 				
 				{% assign arrMsgs = site.data.message %}
-				{% assign lastMsg = arrMsgs.last.messageText %}
+				{% assign lastMsg = arrMsgs.last %}
 				{% assign lastMsgSize = lastMsg.messageText | size %}
-				
-					
 				<div class="pb-message-container">
 					
 					{% if lastMsgSize > 1 %}
