--- a/_layouts/video_sample.html
+++ b/_layouts/video_sample.html
@@ -32,6 +32,8 @@
 	{% include /video/pbs-vjs.html %}
 {% elsif page.videoType == "pb-os-dfp" %}
 	{% include /video/pb-os-dfp.html %}
+{% elsif page.videoType == "pb-os-nas" %}
+	{% include /video/pb-os-nas.html %}
 {% endif %}
 
 
