Added a long form video sample

--- a/_layouts/video_sample.html
+++ b/_layouts/video_sample.html
@@ -34,6 +34,8 @@
 	{% include /video/pb-os-dfp.html %}
 {% elsif page.videoType == "pb-os-nas" %}
 	{% include /video/pb-os-nas.html %}
+{% elsif page.videoType == "pb-ve-lf-fw" %}
+	{% include /video/pb-ve-lf-fw.html %}
 {% endif %}
 
 
