--- a/_layouts/video_sample.html
+++ b/_layouts/video_sample.html
@@ -1,5 +1,7 @@
 {% if page.videoType == "pb-is-br" %}
 	{% include /video/pb-is-br.html %}
+{% elsif page.videoType == "pb-is-bc" %}
+	{% include /video/pb-is-bc.html %}
 {% elsif page.videoType == "pb-is-fp" %}
 	{% include /video/pb-is-fp.html %}
 {% elsif page.videoType == "pb-is-jw01" %}
