Added missing javascript for long form video

--- a/_layouts/video_sample.html
+++ b/_layouts/video_sample.html
@@ -36,6 +36,8 @@
 	{% include /video/pb-os-dfp.html %}
 {% elsif page.videoType == "pb-os-nas" %}
 	{% include /video/pb-os-nas.html %}
+{% elsif page.videoType == "pb-lf-fw" %}
+	{% include /video/pb-lf-fw.html %}
 {% endif %}
 
 
