--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ hr {
 .pb-alert { 
 	
 	padding:10px;
-	width: 100%;
+	width:65wv;
 	margin: 10px 0;
 
 }
@@ -1219,6 +1219,7 @@ button.list-group-item:focus {
 	color: #EA9622;
 	font-size: 34px;
 	font-weight: 400;
+	width:75wv;
 }
 
 .pb-content, .pb-blog h2 { 
