Fixed JW Player server example

--- a/_includes/video/pbs-jw01.html
+++ b/_includes/video/pbs-jw01.html
@@ -64,6 +64,10 @@ function OptanonWrapper() { }
     
     <!--production version of prebid.js-->
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
+    <script type="text/javascript" src="http://ssl.p.jwpcdn.com/player/v/8.0.5/jwplayer.js"></script>
+    <script type="text/javascript">
+        jwplayer.key = "F4+phNkFZ4+I3UhfSN6h8JPbxdnsto3caVMq+A=="; //Test Key - replace this with your own valid JWPlayer license key
+    </script>
     
     <!--pbjs and player code -->	
     	    
