--- a/_includes/video/pbs-jw03.html
+++ b/_includes/video/pbs-jw03.html
@@ -44,7 +44,7 @@ function OptanonWrapper() { }
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,400i,700,700i>
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans+Condensed" />
 	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=R"oboto+Condensed" rel="stylesheet">
 		
     <style>
         #content {
