Cleaning up directories

--- a/_layouts/video_sample.html
+++ b/_layouts/video_sample.html
@@ -14,6 +14,8 @@
 	{% include /video/pb-is-kl.html %}
 {% elsif page.videoType == "pb-is-ol" %}
 	{% include /video/pb-is-ol.html %}
+{% elsif page.videoType == "pb-is-sb" %}
+	{% include /video/pb-is-sb.html %}
 {% elsif page.videoType == "pb-is-vjs" %}
 	{% include /video/pb-is-vjs.html %}
 {% elsif page.videoType == "pbs-br" %}
