--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,8 @@ function OptanonWrapper() { }
         
     <link rel="stylesheet" href="/assets/css/prism.css">
 	<link href="{{site.baseurl}}/assets/css/style.css" rel="stylesheet">
+	<!--for code highlighting-->
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
 
 	    
 	<!-- Favicons -->
@@ -61,6 +63,8 @@ function OptanonWrapper() { }
     <script src="{{site.baseurl}}/assets/js/easing.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/main.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/pbjs_home.js"></script>
+	<script type="text/javascript" src="/assets/js/video/pb-code-highlight.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
     
 </head>
 
