--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Header Bidding, Advanced Bidding, Header Bid, Pre-bid">
     <meta name="description" content="{{page.description}}" />
     
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     
         
     {% if page.head_title %}
@@ -38,7 +38,6 @@ function OptanonWrapper() { }
 	<link href="{{site.baseurl}}/assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 	
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,400i,700,700i>
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans+Condensed" />
 	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
