--- a/_includes/video/pb-is-br.html
+++ b/_includes/video/pb-is-br.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Header Bidding, Advanced Bidding, Header Bid, Pre-bid">
     <meta name="description" content="{{page.description}}" />
     
-    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     
         
     {% if page.head_title %}
