--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -22,7 +22,7 @@
 	   writeDynamicTable({div: "memberTableFounders", data: "memberDataFounders", sort: "rowFirst", maxcols: 2, striped: false} );
 	</script>
 
-	<div class="tableTitle"><h3>Prebid.org Leading Members</h3></div>
+	<div class="tableTitle"><h3>Prebid.org Leader Members</h3></div>
 	<script type="text/javascript">
 	var memberDataLeader=[];
 	var idx=0;
