Added cross player video examples

--- a/_layouts/video_sample.html
+++ b/_layouts/video_sample.html
@@ -40,6 +40,14 @@
 	{% include /video/pb-os-nas.html %}
 {% elsif page.videoType == "pb-lf-fw" %}
 	{% include /video/pb-lf-fw.html %}
+{% elsif page.videoType == "pb-cp-fp" %}
+	{% include /video/pb-cp-fp.html %}
+{% elsif page.videoType == "pb-cp-jw" %}
+	{% include /video/pb-cp-jw.html %}
+{% elsif page.videoType == "pb-cp-kl" %}
+	{% include /video/pb-cp-kl.html %}
+{% elsif page.videoType == "pb-cp-vjs" %}
+	{% include /video/pb-cp-vjs.html %}
 {% endif %}
 
 
