--- a/_includes/video/pb-cp-fp.html
+++ b/_includes/video/pb-cp-fp.html
@@ -66,79 +66,69 @@ function OptanonWrapper() { }
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
     
     <!--flowplayer & prebid js code-->
-    <script>
-		var pbjs = pbjs || {};
-		pbjs.que = pbjs.que || [];
-		iosDevice = !!navigator.platform.match(/iPhone|iPod|iPad/);
-
-		/* PRE-DEFINE `invokeVideoPlayer`
-
-		  Because we have no way of knowing when all the bids will be
-		  returned from Prebid we can't be sure that the browser will
-		  reach the point where `invokeVideoPlayer` is defined before
-		  `bidsBackHandler` fires and tries to call it.
-
-		  To prevent an "`invokeVideoPlayer` not defined" error, we
-		  pre-define it before we make the call to Prebid, and redefine
-		  it later on with the code to create the player and play the
-		  ad.
-
-		  In this first version, it simply stores the winning VAST to
-		  use later. */
-
-		var tempTag = false;
-		var invokeVideoPlayer = function(url) {
-			tempTag = url;
-		}
-
-		var videoAdUnit = {
-			code: 'video1',
-			mediaTypes: {
-				video: {
-					playerSize: [640, 480],
-					context: 'instream'
-				}
-			},
-			bids: [{
-				bidder: 'appnexus',
-				params: {
-					placementId: iosDevice ? 13239390 : 13232361, // Add your own placement id here. Note, skippable video is not supported on iOS 
-					video: {
-						skipppable: true,
-						playback_method: ['auto_play_sound_off']
-					}
-				}
-			}]
-		};
-
-		pbjs.que.push(function() {
-			pbjs.addAdUnits(videoAdUnit);
-			pbjs.setConfig({
-				debug: true,
-				cache: {
-					url: 'https://prebid.adnxs.com/pbc/v1/cache'
-				}
-			});
-			pbjs.requestBids({
-				bidsBackHandler: function(bids) {
-					var videoUrl = pbjs.adServers.dfp.buildVideoUrl({
-						adUnit: videoAdUnit,
-						params: {
-							iu: '/19968336/prebid_cache_video_adunit',
-							cust_params: {
-								section: 'blog',
-								anotherKey: 'anotherValue'
-							},
-							output: 'vast'
-						}
-					});
-					invokeVideoPlayer(videoUrl);
-				}
-			});
-		});
-
+    <link rel="stylesheet" href="//cdn.flowplayer.com/releases/native/stable/style/flowplayer.css">
+	<script src="//cdn.flowplayer.com/releases/native/stable/flowplayer.min.js"></script>
+	<script src="//cdn.flowplayer.com/releases/native/stable/plugins/ads.min.js"></script>
+	<script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+	
+	<style>
+	        #player {
+	            max-width: 40em;
+	            width: 100%;
+	            float: left;
+	        }
+	
+	        #controls {
+	            float: left;
+	            padding: 1em;
+	        }
+	    </style>
+	    
+	<script type="text/javascript">
+	  var options = {
+	    biddersSpec: {
+	      code: 'video1',
+	      sizes: [640,480],
+	      mediaTypes: {
+	        video: {
+	          context: "instream"
+	        }
+	      },
+	      bids: [
+	        {
+	          bidder: 'appnexus',
+	          params: {
+	            placementId: '13232361', // Add your own placement id here
+	            video: {
+	              skipppable: true,
+	              playback_method: ['auto_play_sound_off']
+	            }
+	          }
+	        }
+	      ]
+	    },
+	    prebidConfigOptions: {
+	      cache: {
+	        url: 'https://prebid.adnxs.com/pbc/v1/cache'
+	      }
+	    },
+	    dfpParameters: {
+	      params: {
+	        iu: '/19968336/prebid_cache_video_adunit',
+	        cust_params: {
+	          section: "blog",
+	          anotherKey: "anotherValue"
+	        },
+	        output: "vast"
+	      }
+	    },
+	  };
+	  function doHeaderBidding() {
+	    window.prebidPluginCP.doPrebid(options);
+	  }
+	    
 	</script>
-    
+	<script src="//acdn.adnxs.com/video/plugins/cp/PrebidPluginCP.min.js" onload="doHeaderBidding()"></script>    
 </head>
 
 <body>
