--- a/_includes/video/pb-cp.html
+++ b/_includes/video/pb-cp.html
@@ -65,7 +65,7 @@ function OptanonWrapper() { }
     <!--production version of prebid.js-->
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
     
-    <!--flowplayer & prebid js code-->
+    <!--brightcove & prebid js code-->
     <script>
 		var pbjs = pbjs || {};
 		pbjs.que = pbjs.que || [];
