Adding Radiant video player samples

--- a/_includes/video/pbs-oy.html
+++ b/_includes/video/pbs-oy.html
@@ -65,7 +65,7 @@ function OptanonWrapper() { }
     <!--production version of prebid.js-->
     <script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
     
-    <!--pbjs and player code -->	
+    <!--ooyala and player code -->	
     
 	<!-- LOAD OOYALA PLUGINS
 
