--- a/_layouts/video_sample.html
+++ b/_layouts/video_sample.html
@@ -14,6 +14,8 @@
 	{% include /video/pb-is-kl.html %}
 {% elsif page.videoType == "pb-is-ol" %}
 	{% include /video/pb-is-ol.html %}
+{% elsif page.videoType == "pb-is-rd" %}
+	{% include /video/pb-is-rd.html %}
 {% elsif page.videoType == "pb-is-sb" %}
 	{% include /video/pb-is-sb.html %}
 {% elsif page.videoType == "pb-is-vjs" %}
@@ -32,10 +34,14 @@
 	{% include /video/pbs-kl.html %}
 {% elsif page.videoType == "pbs-oy" %}
 	{% include /video/pbs-oy.html %}
+{% elsif page.videoType == "pbs-rd" %}
+	{% include /video/pbs-rd.html %}
 {% elsif page.videoType == "pbs-vjs" %}
 	{% include /video/pbs-vjs.html %}
 {% elsif page.videoType == "pb-os-dfp" %}
 	{% include /video/pb-os-dfp.html %}
+{% elsif page.videoType == "pb-os-rd" %}
+	{% include /video/pb-os-rd.html %}
 {% elsif page.videoType == "pb-os-nas" %}
 	{% include /video/pb-os-nas.html %}
 {% elsif page.videoType == "pb-lf-fw" %}
