Refactored WTH code from Google to custom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1310,6 +1310,57 @@ pre {
 	
 }
 
+/************ Was This Helpful Form ****************/
+
+.wthHeader { 
+	background-color: #EA9622;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	height: 10px;
+	width: 100%;
+	margin-bottom: 15px;
+}
+
+.wthBordered { 
+	border: 1px solid #cccccc;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	margin-top: 10px;
+	padding-left: 7px;
+}
+
+.wthForm { 
+	padding-left: 15px;
+}
+
+.wthForm.input { 
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.wthSubmit { 
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.wthLabel { 
+	
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	font-size:18px;
+	color: #EA9622;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.wthTitle { 
+	
+	font-family: 'Lato', sans-serif;
+	font-weight: 700;
+	font-size:24px;
+	color: #3498db;
+}
+
 
 
 /* 
@@ -2114,6 +2165,8 @@ div.pl-doc-entry{
   right: 10px;
   left: auto;
 }
+
+
 
 
 
