--- a/_includes/wth_form.html
+++ b/_includes/wth_form.html
@@ -1,1 +1,25 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScEene89LKUH_eYXjKpEEP967X0DHUOl9bYoaSKTlVcXtH2aw/viewform?embedded=true" width="640" height="398" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+<div style="margin-top:10px; align:center;">
+	
+	<hr>
+	
+	<div class="wthHeader">&nbsp;</div>
+	
+	<div>
+		<p class="wthTitle">Was this page helpful?</p>
+	</div>
+	
+	<div class="wthForm">
+	
+		<form action="https://getsimpleform.com/messages?form_api_token=e0e505526a819ea20adbe5256ca91d83" method="post">
+		
+			<input type='radio' name='{{ page.title}}' value="1"/><label for="Yes" class="wthLabel">Yes</label><br>
+			<input type='radio' name='{{ page.title}}' value="0"/><label for="No" class="wthLabel">No</label><br>
+			<p class="wthSubmit">
+				<input type='submit' value='Submit' />
+			</p>
+			
+		</form>
+	</div>
+	
+</div>
