adding deviceAccess flag and TCF2

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -17,7 +17,7 @@
 	</script>
 	<div id="memberTableLeader"></div>
 	<script>
-	  writeDynamicTable({div:"memberTableLeader", data:"memberDataLeader", sort:"rowFirst", maxcols:4, striped: false});
+	  writeDynamicTable({div:"memberTableLeader", data:"memberDataLeader", sort:"rowFirst", maxcols:4, striped: false, fixedHeight: true});
 	</script>
 
 	<div class="tableTitle"><h3>Prebid.org Technology Partner Members</h3></div>
@@ -35,7 +35,7 @@
 	</script>
 	<div id="memberTableTech"></div>
 	<script>
-	  writeDynamicTable({div:"memberTableTech", data:"memberDataTech", sort:"rowFirst", striped: false});
+	  writeDynamicTable({div:"memberTableTech", data:"memberDataTech", sort:"rowFirst", maxcols: 4, striped: false, fixedHeight: true});
 	</script>
 
 	<div class="tableTitle"><h3>Prebid.org Publisher Members</h3></div>
@@ -53,7 +53,7 @@
 	</script>
 	<div id="memberTablePub"></div>
 	<script>
-	  writeDynamicTable({div: "memberTablePub", data: "memberDataPub", sort:"rowFirst", maxcols: 4, striped: false});
+	  writeDynamicTable({div: "memberTablePub", data: "memberDataPub", sort:"rowFirst", maxcols: 4, striped: false, fixedHeight: true});
 	</script>
 
 	<div class="tableTitle"><h3>Prebid.org Community Members</h3></div>
@@ -73,7 +73,7 @@
 
 	<div id="memberTableComm"></div>
 	<script>
-	  writeDynamicTable({div: "memberTableComm", data: "memberDataComm", sort:"rowFirst", striped: false});
+	  writeDynamicTable({div: "memberTableComm", data: "memberDataComm", sort:"rowFirst", maxcols: 4, striped: false, fixedHeight: true});
 	</script>
 
 
